--- a/.gitignore
+++ b/.gitignore
@@ -4,12 +4,17 @@
 front-end/node_modules
 front-end/.pnp
 front-end/.pnp.js
+back-end/node_modules
+back-end/.pnp
+back-end/.pnp.js
 
 # testing
 front-end/coverage
+back-end/coverage
 
 # production
 front-end/build
+back-end/build
 
 # misc
 front-end/.DS_Store
@@ -17,7 +22,15 @@ front-end/.env.local
 front-end/.env.development.local
 front-end/.env.test.local
 front-end/.env.production.local
+back-end/.DS_Store
+back-end/.env.local
+back-end/.env.development.local
+back-end/.env.test.local
+back-end/.env.production.local
 
 front-end/npm-debug.log*
 front-end/yarn-debug.log*
 front-end/yarn-error.log*
+back-end/npm-debug.log*
+back-end/yarn-debug.log*
+back-end/yarn-error.log*
