--- a/back-end/package.json
+++ b/back-end/package.json
@@ -9,6 +9,7 @@
   "author": "Priya Aswani",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.20.0",
     "express": "^4.18.1",
     "mongoose": "^6.3.3",
     "morgan": "^1.10.0",
