--- a/.gitignore
+++ b/.gitignore
@@ -18,11 +18,14 @@ back-end/build
 
 # misc
 front-end/.DS_Store
+front-end/.env
 front-end/.env.local
 front-end/.env.development.local
 front-end/.env.test.local
 front-end/.env.production.local
+
 back-end/.DS_Store
+back-end/.env
 back-end/.env.local
 back-end/.env.development.local
 back-end/.env.test.local
