--- a/back-end/package.json
+++ b/back-end/package.json
@@ -9,6 +9,7 @@
   "author": "Priya Aswani",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.0.1",
     "body-parser": "^1.20.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.1",
